[gd_scene load_steps=4 format=3 uid="uid://nggnmoo5st8s"]

[ext_resource type="Texture2D" uid="uid://ixt776wtdnpr" path="res://icon.svg" id="1_kyqiw"]
[ext_resource type="Script" uid="uid://cc6ib2wex3jk0" path="res://Scenes/player.gd" id="2_gntrk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kyqiw"]
radius = 43.174065

[node name="Player" type="Sprite2D"]
texture = ExtResource("1_kyqiw")
script = ExtResource("2_gntrk")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(84, 0)
collision_mask = 8

[node name="BlueCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueCollision"]
shape = SubResource("CircleShape2D_kyqiw")

[node name="RedCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedCollision"]
shape = SubResource("CircleShape2D_kyqiw")

[node name="HazardCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardCollision"]
shape = SubResource("CircleShape2D_kyqiw")

[connection signal="body_entered" from="BlueCollision" to="." method="_on_blue_collision_body_entered"]
[connection signal="body_entered" from="RedCollision" to="." method="_on_red_collision_body_entered"]
[connection signal="body_entered" from="HazardCollision" to="." method="_on_hazard_collision_body_entered"]
